--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
                 <div class="about-pic animate hide-js ">
 
-                    <img class="about-img" src="assets/about.JPG" alt="my pic">
+                    <img class="about-img" src="assets/about.jpg" alt="my pic">
                 </div>
                 <div class="about-desc animate hide-js ">
                     <h1>SELF <span>SUMMARY</span></h1>
