--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         portfolio showcases my projects and skills.</p>
                     <br>
                     <a href="assets/vignesh_resume.pdf" download="vignesh_resume.pdf">
-                        <button type="button" class="btn-cv-dn">Download CV</button>
+                        <button type="button" class="btn-cv-dn">DownlCV</button>
                     </a>
                 </div>
             </div>
