--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         portfolio showcases my projects and skills.</p>
                     <br>
                     <a href="assets/vignesh_resume.pdf" download="vignesh_resume.pdf">
-                        <button type="button" class="btn-cv-dn">DownlCV</button>
+                        <button type="button" class="btn-cv-dn">Download CV</button>
                     </a>
                 </div>
             </div>
@@ -87,7 +87,7 @@
                 <div>
 
 
-                    <img class="profile-img animate move-left" src="assets/sized.JPG" alt="my profile pic">
+                    <img class="profile-img animate move-left" src="assets/sized.jpg" alt="my profile pic">
 
                 </div>
         </section>
