--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <div>
 
 
-                    <img class="profile-img animate move-left" src="assets/sized.jpg" alt="my profile pic">
+                    <img class="profile-img animate move-left" src="assets/sized.png" alt="my profile pic">
 
                 </div>
         </section>
