--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                                     design and development skills. This project demonstrates my ability to bring UI/UX
                                     designs to life as interactive web applications.
                                 </p>
-                                <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                                <a href="https://javi2754.github.io/Vignesh-Portfolio/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                                 <p class="backhead">Pizza Hunter Website</p>
                                 <p class="backpara">
                                     In my first web development project, I created a model website for a fictional pizza
