--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                                         class="fa-brands fa-facebook"></i></a>
                                 <a href="https://www.instagram.com/vicky.27._/ " target="_blank"><i
                                         class="fa-brands fa-instagram"></i></a>
-                                <a href="https://www.linkedin.com/in/vignesh-p-46153a302" target="_blank"><i
+                                <a href="https://www.linkedin.com/in/vigneshp07" target="_blank"><i
                                         class="fa-brands fa-linkedin-in"></i></a>
                                 <a href="https://github.com/javi2754" target="_blank"><i
                                         class="fa-brands fa-github"></i></a>
