--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!--************************************** box************************************-->
     <div class="wrapper">
         <div class="box">
-            <div></div>
+            <div><!-- leaving it blank purposefully--></div>
             <div></div>
             <div></div>
             <div></div>
@@ -87,7 +87,7 @@
                 <div>
 
 
-                    <img class="profile-img animate move-left" src="assets/sized.png" alt="my profile pic">
+                    <img class="profile-img animate move-left" src="assets/IMG_2196[1].jpg" alt="my profile pic">
 
                 </div>
         </section>
